# grammar_vs_llms

./: .gitignore  README.md  exp1_translate.ipynb  mt_prompts.csv  mt_prompts.json  open_model.py  phi3.py  pyproject.toml  qe.py  requirements.txt  run_phi3.sh
cs-uk/: ref-sorted.txt  scores-sorted.txt  src-sorted.txt  test-ref-qe_scores.txt
de-en/: ref-sorted.txt  scores-sorted.txt  src-sorted.txt  test-ref-qe_scores.txt
experiments/bucketed_noised_gemba_prompts/: gemba_prompts_noised_L2_bucketed.json  gemba_prompts_noised_lexicalphrasal_bucketed.json  gemba_prompts_noised_orthographic_bucketed.json  gemba_prompts_noised_typos_synthetic_bucketed.json
experiments/bucketed_noised_prompts/: gemba_base_noised_L2_bucketed.json  gemba_base_noised_lexicalphrasal_bucketed.json  gemba_base_noised_orthographic_bucketed.json  gemba_base_noised_typos_synthetic_bucketed.json  mt_base_noised_L2_bucketed.json  mt_base_noised_LazyUser_bucketed.json  mt_base_noised_lexicalphrasal_bucketed.json  mt_base_noised_orthographic.json  mt_base_noised_orthographic_bucketed.json  mt_base_noised_register_bucketed.json  mt_base_noised_typos_synthetic_bucketed.json
experiments/models/: README.md  __init__.py  models.py
experiments/noised_prompts/: gemba_base_noised_L2.json  gemba_base_noised_lexicalphrasal.json  gemba_base_noised_orthographic.json  (+9 more)
grammar_v_mtllm/: __init__.py  utils.py  utils_fig.py
old/: llama3_hf.ipynb
open_models/: evaluate_almar.sh  evaluate_model.py
prompts/: mt_noise.json
src/: main.py  models.py  requirements.txt  utils.py
vilem/: .gitignore
(+354 files in other folders)
